@@ -7,7 +7,8 @@ update-manager (1:0.141) UNRELEASED; urgency=low
   * tests/test_sources_list.py:
     - update tests
   * UpdateManager/Core/utils.py:
-    - fix url_downloadable and add tests
+    - fix url_downloadable and add tests, based on the patch from
+      Paulo Albuquerque, many thanks (LP: #396187)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 25 May 2010 11:23:57 +0200
 
